--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -24,18 +24,16 @@
                 <h4>Principal</h4>
                 <ul type="none">
                     <li><a href="/">Inicio</a></li>
-                    <li><a href="/contacto">Cantacto</a></li>
-                    <li><a href="/publicar">Publicar</a></li>
-                    <li><a href="/blog">Blog</a></li>
+                    <li><a href="/contacto">Contacto</a></li>
+                    <li><a href="http://blog.alquilerargentina.com/">Blog</a></li>
                 </ul>
             </div>
             <div class="ul-secciones">
                 <h4>Secciones</h4>
                 <ul type="none">
-                    <li><a href="/ofertas">Ofertas próximas</a></li>
-                    <li><a href="/escapadasCercanas">Escapadas Cercanas</a></li>
-                    <li><a href="/sorteos">Sorteos</a></li>
-                    <li><a href="/feriados">Feriados</a></li>
+                    <li><a href="/">Ofertas destacadas</a></li>
+                    <li><a href="/">Escapadas cercanas</a></li>
+                    <li><a href="https://www.argentina.gob.ar/interior/feriados-nacionales-2021">Feriados</a></li>
                 </ul>
             </div>
         </div>
