--- a/public/css/styleSheet.css
+++ b/public/css/styleSheet.css
@@ -72,7 +72,7 @@
             align-items: center;
             height: 70%;
             }
-            .logo{
+            a.logo{
                 width: 15%;
                 height: 80%;           
             }
