--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -13,8 +13,8 @@
                     <li><a href="/profile">Perfil</a></li>
                     <li><a href="/Logout">Logout</a></li>
                     <% } else { %>
-                        <li><a href="users/login">Logueate</a></li>
-                        <li><a href="users/register">Registrate</a></li>
+                        <li><a href="/login">Logueate</a></li>
+                        <li><a href="/register">Registrate</a></li>
                         <% } %>
                 <% if (locals.admLogged){ %>
                     <li><a href="/products">Administrar</a></li>
@@ -23,8 +23,10 @@
         </nav>
 
         <div class="logo-completo">
-
-            <img src="/img/logo-casas-alquiler.jpg" alt="" class="logo">
+            <a href="/">   <img src="/img/logo-casas-alquiler.jpg" alt="" class="logo">  </a>
+            
+            
+            
 
             <h1 class="nombre-logo">Serena</h1>
             
