Cart vista confirmación de compra

--- a/src/views/products/detailCart.ejs
+++ b/src/views/products/detailCart.ejs
@@ -18,6 +18,14 @@
                     <h5 class="dato"><%= user.telephone%></h5>
                 </div>
             </article>
+            <article>
+                <h4>Datos de la propiedad alquilada</h4>
+                <div>
+                    <h5>Propiedad</h5>
+                    <h5>"Destino:"<%=property.destination.destination%>"  Dirección:"<%=property.address%></h5>
+
+                </div>
+            </article>
         </div>
     </div>
 
