--- a/public/css/styleSheet.css
+++ b/public/css/styleSheet.css
@@ -444,6 +444,36 @@
                 display: flex;
             }
 
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    flex: 1 2 calc(50% - 2rem);
+    }
+              
+.card {
+    margin: 1rem;
+    background: white;
+    box-shadow: 2px 4px 25px rgba(0, 0, 0, .1);
+    border-radius: 12px;
+    overflow: hidden;
+    transition: all .2s linear;
+    }
+
+    .imageCard {
+        max-height: 260px;
+        max-width: 260px;
+        height: auto;
+        position: relative;
+        margin-left: 4px;
+        margin-right: 4px;
+    }
+    
+    .card:hover {
+    box-shadow: 2px 8px 45px rgba(0, 0, 0, .15);
+    transform: translate3D(0, -2px, 0);
+    }
+              
 @media (min-width:860px){
     .accesos{
         display: block;
