--- a/public/css/styleSheet.css
+++ b/public/css/styleSheet.css
@@ -383,6 +383,17 @@
         margin-left: 50px;
     }
 
+
+.is-invalida{
+    background-color: red;
+}
+
+.alert-warning{
+    color:#842029;
+    background-color: #F8D7DA;
+    text-align: center;
+    border-radius: 10px;
+}
 /*================== Botones =======================*/
 .button{
     background-color:#1259c3;
