--- a/src/views/products/createProducts.ejs
+++ b/src/views/products/createProducts.ejs
@@ -5,6 +5,7 @@
 
     <main class="main">
         <h3 class="titulos">Nueva propiedad</h3>
+        <ul class="errores"></ul>
         
         <form method="POST" action="/products" enctype="multipart/form-data" class="form_edit"> 
             <div class="campo">
@@ -37,6 +38,7 @@
                 <input 
                     type="file" 
                     name="foto"
+                    id="foto"
                     value="<%= locals.oldData ? oldData.foto : '0' %>"
                 >
                 <input 
@@ -93,6 +95,7 @@
                 <input 
                     type="number" 
                     name="n_people" 
+                    id="n_people" 
                     value="<%= locals.oldData ? oldData.n_people : null %>"
                     class="n_people <%= locals.errors &&  errors.n_people ? 'is-invalid' : null %>"
                 >
@@ -108,6 +111,7 @@
                 <input 
                     type="text" 
                     name="price" 
+                    id="price" 
                     value="<%= locals.oldData ? oldData.price : null %>"
                     class="precio <%=locals.errors && errors.price ? 'is-invalid' : null %>"
                 >
@@ -123,6 +127,7 @@
                 <input 
                     type="text" 
                     name="address" 
+                    id="address" 
                     value="<%= locals.oldData ? oldData.address : null %>"
                     class="<%=locals.errors && errors.address ? 'is-invalid' : null %>"
                 >
@@ -200,5 +205,5 @@
 
     </main>
     <%- include ('../partials/footer') %>
-
+    <script src="/js/createProduct.js"></script>
 </body>
