--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -10,16 +10,18 @@
 <section class="form">
         <form method="POST" action="/login" class="register">
                 <div class="control-formulario">
-                    <input type="text" placeholder="e-mail" name="email" class="control" value="<%= locals.oldData ? oldData.email : null %>">
+                    <input type="text" placeholder="e-mail" name="email" id="email" class="control" value="<%= locals.oldData ? oldData.email : null %>">
                 </div> 
+                <div class="text-danger" id="erroremail"></div>
                 <% if (locals.errors && errors.email) { %>
                     <div class="123">
                         <%= errors.email.msg %>
                     </div>
                 <% }  %>       
                 <div class="control-formulario">
-                    <input type="password" placeholder="password" name="password" class="control" >
-                </div>    
+                    <input type="password" placeholder="password" name="password" id="password" class="control" >
+                </div>   
+                <div class="text-danger" id="errorpassword"></div> 
                 <% if (locals.errors && errors.password) { %>
                     <div class="123">
                         <%= errors.password.msg %>
@@ -39,7 +41,7 @@
         </section>
 
  <%- include ('../partials/footer') %>
-
+ <script src ="/js/validatorLogin.js"></script>
 
 </body>
 
