--- a/src/views/products/createProducts.ejs
+++ b/src/views/products/createProducts.ejs
@@ -15,6 +15,7 @@
                     class=<%=locals.errors && errors.categ ? 'is-invalid' : null %>
                 >
                     <% categories.forEach(cat => {%>
+                        <option value="">Seleccionar</option>
                         <option 
                             value="<%= cat.id %>"
                             <% if (locals.oldData && oldData.categ == cat.id) { %>
@@ -32,7 +33,17 @@
                     </div>
                 <% } %>
             </div>
-
+            <div class="campo">
+                <label for="description">Descripción</label>
+                <textarea name="description" id="description" cols="100" rows="2"></textarea>
+                <div class="text-danger"></div>
+                <% if (locals.errors && errors.description) { %>
+                    <div class="text-danger">
+                        <%= errors.description.msg %>
+                    </div>
+                <% } %>
+            </div>
+            </div>
             <div class="campo">
                 <label for="foto">Imagen 1</label>
                 <input 
@@ -208,5 +219,5 @@
 
     </main>
     <%- include ('../partials/footer') %>
-    <script src="/js/createProduct.js"></script>
+    
 </body>
